--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="tela-principal">
-                <h1>TRANSFORME SEU TEXTO</h1>
+                <h1>TRANSFORME SEU TEXTO!</h1>
             
                 <div class="textareas">
 
